change delay and fillPIN methods to objects

--- a/src/course_beta.html
+++ b/src/course_beta.html
@@ -87,6 +87,8 @@ Search
 <SPAN class="fieldlabeltextinvisible"><LABEL for=keyword_in_id><SPAN class="fieldlabeltext">Search</SPAN></LABEL></SPAN>
 <input type="text" name="KEYWRD_IN" size="20" maxlength="65" ID="keyword_in_id" />
 <input type="SUBMIT" value="Go" />
+<input type="Password" name="KEYWRD_IN" size="20" maxlength="65" ID="keyword_in_id" />
+<input type="Submit" value="subMit" />
 </form>
 </div>
 </TD>
